// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SideNav rendering renders expected elements 1`] = `
<Context.Provider
  value={true}
>
  <nav
    aria-hidden={false}
    className="SideNav"
    inert={false}
  >
    child
  </nav>
</Context.Provider>
`;

exports[`SideNav rendering renders expected elements when className is set 1`] = `
<Context.Provider>
  <nav
    aria-hidden={true}
    className="SideNav TestClass"
    inert={true}
  >
    child
  </nav>
</Context.Provider>
`;
